--- a/src/Functions/TMDBDataCollector/local.settings.json
+++ b/src/Functions/TMDBDataCollector/local.settings.json
@@ -4,6 +4,11 @@
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     "database_connection": "",
-    "tmdb_api_key": ""
+    "tmdb_api_key": "",
+    "FUNCTIONS_EXTENSION_VERSION": "",
+    "APPINSIGHTS_CONNECTIONSTRING": "",
+    "ApplicationInsightsAgent_EXTENSION_VERSION": "",
+    "DiagnosticServices_EXTENSION_VERSION": "",
+    "APPINSIGHTS_PROFILERFEATURE_VERSION": ""
   }
 }
