--- a/src/Functions/TMDBDataCollector/TMDBDataCollector.csproj
+++ b/src/Functions/TMDBDataCollector/TMDBDataCollector.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Shared\CompressionService\CompressionService.csproj" />
     <ProjectReference Include="..\..\Shared\DatabaseService\DatabaseService.csproj" />
     <ProjectReference Include="..\..\Shared\Models\Models.csproj" />
     <ProjectReference Include="..\..\Shared\TMDBService\TMDBService.csproj" />
