--- a/src/Functions/TMDBDailyFileExportDownloader/TMDBDailyFileExportDownloader.csproj
+++ b/src/Functions/TMDBDailyFileExportDownloader/TMDBDailyFileExportDownloader.csproj
@@ -4,6 +4,7 @@
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.15.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
